elk_stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: elk
  annotations:
    cert-manager.io/cluster-issuer: production
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.qurtana.com.ng
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kibana
                port:
                  number: 5601
  tls:
    - hosts:
        - kibana.qurtana.com.ng
      secretName: production-cluster-issuer
